@@ -70,7 +70,7 @@ public class WebTest {
 
     public void doTest(String jsp) throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot + jsp);
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot + jsp).toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
