@@ -59,7 +59,7 @@ public class WebTest {
 
     public void run() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot + "/webapp-context-xml-test.jsp");
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot + "/webapp-context-xml-test.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
